[tool.poetry]
name = "repl_python3_2400bot"
version = "0.1.0"
description = ""
authors = ["TomaszDobrowols <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
"discord.py-fork" = "^2.0.0-alpha.0"
Flask = "^2.0.3"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
